# ii-agent

./: .gitignore  README.md  pyproject.toml  ws_server.py
.github/workflows/: build-dev.yml  build-production.yml  build-shared.yml
.templates/nextjs-shadcn/: package.json
docker/sandbox/: start-services.sh
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: global.css  provider.tsx  router.tsx
frontend/src/app/routes/: agent.tsx  chat.tsx  dashboard.tsx  forgot-password.tsx  home.tsx  login.tsx  privacy-policy.tsx  settings.tsx  share.tsx  signup.tsx  terms-of-use.tsx
frontend/src/components/: agent-tab-mobile.tsx  button-icon.tsx  chat-message-content.tsx  code-editor.tsx  credit-tooltip.tsx  credit-usage.tsx  credit.tsx  download-files-chat.tsx  editable-html.tsx  header.tsx  image-edit-dialog.tsx  markdown.tsx  model-tag.tsx  post-action.tsx  protected-route.tsx  public-home-page.tsx  question-enhance-button.tsx  question-feature-selector.tsx  question-file-upload.tsx  question-files-preview.tsx  question-input.tsx  question-mode-selector.tsx  question-submit-button.tsx  question-suggestions.tsx  right-sidebar.tsx  search-history.tsx  session-item.tsx  share-agent-content.tsx  share-chat-content.tsx  sidebar.tsx  thinking-message.tsx  tool-content.tsx  upgrade-plan.tsx  uploaded-files-display.tsx  user-profile-dropdown.tsx
frontend/src/components/agent/: action.tsx  agent-badge.tsx  agent-build.tsx  agent-controller.tsx  agent-files.tsx  agent-popover-done.tsx  agent-result.tsx  agent-step.tsx  (+14 more)
frontend/src/constants/: features.tsx  models.tsx  tool.tsx
frontend/src/contexts/: websocket-context.tsx
frontend/src/hooks/: use-app-events.tsx  use-chat-query.tsx  use-chat-transport.tsx  use-google-drive.tsx  use-navigation-leave-session.tsx  use-question-handlers.tsx  use-session-manager.tsx  use-upload-files.tsx  use-websocket-auth-sync.tsx
frontend/src/lib/: axios.ts
frontend/src/services/: chat.service.ts  connector.service.ts  file.service.ts  fullstack.service.ts  session.service.ts  settings.service.ts  upload.service.ts  user.service.ts
frontend/src/state/: index.ts  reducer.ts  store.ts
frontend/src/typings/: agent.ts  chat.ts  file.ts  session.ts  settings.ts  upload.ts
frontend/src/utils/: chat-events.ts
tests/llm/context_manager/: test_llm_summarizing.py
tests/tools/: test_str_replace_tool.py
(+29 files in other folders)
